2004-01-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate $(LIB). 
	Use noinst_DATA to trigger building libbsp.a.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.
	* startup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* startup/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Misc cleanups and fixes.
	* start/Makefile.am: Misc cleanups and fixes.
	* startup/Makefile.am: Misc cleanups and fixes.
	* wrapup/Makefile.am: Misc cleanups and fixes.

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.
	* clock/Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* fatal/Makefile.am: Cosmetics.
	* network/Makefile.am: Cosmetics.
	* startup/Makefile.am: Cosmetics.
	* timer/Makefile.am: Cosmetics.
	* wrapup/Makefile.am: Cosmetics.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* fatal/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/console-recording.c, console/console.c,