@@ -4,12 +4,13 @@
 
 ACLOCAL_AMFLAGS = -I ../../../../aclocal
 
+include $(top_srcdir)/../../../../automake/compile.am
+include $(top_srcdir)/../../bsp.am
+
 # wrapup is the one that actually builds and installs the library
 # from the individual .rel files built in other directories
 
-SUBDIRS = . start startup clock console fatal timer network wrapup
-
-include $(top_srcdir)/../../bsp.am
+SUBDIRS = . startup clock console fatal timer network wrapup
 
 include_HEADERS += include/coverhd.h
 include_HEADERS += include/page_table.h
@@ -17,9 +18,17 @@ include_HEADERS += include/fatal.h
 
 nodist_include_HEADERS += $(top_srcdir)/../shared/mvme/mvme16x_hw.h
 
-all-local: $(PREINSTALL_FILES)
+m68k_shared_S_FILES = $(top_srcdir)/../../m68k/shared/start.S
+$(ARCH)/%$(LIB_VARIANT).$(OBJEXT): $(top_srcdir)/../../m68k/shared/start.S $(ARCH)/$(dirstamp)
+	${CCASCOMPILE} -DASM -o $@ -c $<
+
+project_lib_DATA = $(ARCH)/start$(LIB_VARIANT).$(OBJEXT)
+
+all-local: $(PREINSTALL_FILES) $(TMPINSTALL_FILES)
 
 EXTRA_DIST = times
+
+TMPINSTALL_FILES =
 
 $(PROJECT_INCLUDE)/coverhd.h: include/coverhd.h $(PROJECT_INCLUDE)/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/coverhd.h
@@ -36,6 +45,10 @@ PREINSTALL_FILES += $(PROJECT_INCLUDE)/fatal.h
 $(PROJECT_INCLUDE)/mvme16x_hw.h: $(top_srcdir)/../shared/mvme/mvme16x_hw.h $(PROJECT_INCLUDE)/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/mvme16x_hw.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/mvme16x_hw.h
+
+$(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT): $(ARCH)/start$(LIB_VARIANT).$(OBJEXT) $(PROJECT_LIB)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT)
+TMPINSTALL_FILES += $(PROJECT_LIB)/start$(LIB_VARIANT).$(OBJEXT)
 
 include $(top_srcdir)/../../../../automake/subdirs.am
 include $(top_srcdir)/../../../../automake/local.am
